# dj_jwt_react-

./: README.md  docker-compose.yaml
dj_djoser/: manage.py  pyproject.toml
dj_djoser/api/v1/: urls.py
dj_djoser/api/v1/show/: urls.py  views.py
dj_djoser/api/v1/user/: urls.py  views.py
dj_djoser/dj_djoser/: asgi.py  settings.py  urls.py  wsgi.py
dj_jwt/: manage.py
dj_jwt/api/v1/: urls.py
dj_jwt/api/v1/user/: urls.py
dj_jwt/dj_jwt/: asgi.py  settings.py  urls.py  wsgi.py
docs/: be.md  fe.md
fe/: package.json
fe/src/: App.js  index.tsx
fe/src/components/: Home.js
fe/src/pages/: Login.js  Profile.js
fe/src/services/: api_service.js  auth_service.js  jwt_service.js  user_service.js
system/docker/django/: Dockerfile
